added component factory

--- a/my-first-project/src/app/app.component.html
+++ b/my-first-project/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1><app-game-control (timerEvent)="timerEmitted($event)"></app-game-control></h1>
+<div class="topfixed">
+    <h1>
+        <app-game-control (timerEvent)="timerEmitted($event)"></app-game-control>
+    </h1>
+</div>
+<div #content></div>
